Fix/minor bugs (#502)
* Open google sheets in new link

* Fix data node spacing

* Add titles to widget components

* Add filter migration

* Add emmet completion to django-html

* Solve chart overlapping modal x

* Fix popovers z index

* Fix dashboard padding

* Potentially fix bug with table in dashboards

--- a/assets/styles/base/_fieldset.scss
+++ b/assets/styles/base/_fieldset.scss
@@ -1,11 +1,7 @@
 fieldset {
   display: flex;
   flex-direction: column;
-  margin-bottom: 1.6rem;
-
-  & > label {
-    margin-bottom: 1.6rem;
-  }
+  gap: 1.6rem;
 
   ul {
     display: flex;
