--- a/assets/styles/components/_popover.scss
+++ b/assets/styles/components/_popover.scss
@@ -7,3 +7,7 @@
   border-radius: 5px;
   color: var(--c-black);
 }
+
+[data-popover-target="body"] {
+  z-index: var(--z-ui);
+}
